feat: implement uploadMultipleFiles endpoint in FileController