@@ -15,7 +15,9 @@ import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
+import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/file/v1")
@@ -40,9 +42,12 @@ public class FileController implements FileControllerDocs {
         return new UploadFileResponseDTO(fileName, fileDownloadUri, file.getContentType(), file.getSize());
     }
 
+    @PostMapping(value = "/uploadMultipleFiles")
     @Override
-    public List<UploadFileResponseDTO> uploadMultipartFiles(MultipartFile[] files) {
-        return List.of();
+    public List<UploadFileResponseDTO> uploadMultipartFiles(@RequestParam("files") MultipartFile[] files) {
+        return Arrays.asList(files)
+                .stream()
+                .map(file -> uploadFile(file)).collect(Collectors.toList());
     }
 
     @Override
